force-app/main/default/objects/taralex__OrgSetting__c/taralex__OrgSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting for storing the merge string for Edit in Excel functionality</description>
    <label>Org Setting</label>
</CustomObject>