force-app/main/default/objects/taralex__OrgSetting__c/fields/taralex__Metadata_Deployment_Id__c.field-meta.xml
<CustomField>
    <fullName>taralex__Metadata_Deployment_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>stores the ID of the last deployment operation</description>
    <label>Metadata Deployment Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>