force-app/main/default/objects/taralex__OrgSetting__c/fields/taralex__Metadata_Deplyment_Flag__c.field-meta.xml
<CustomField>
    <fullName>taralex__Metadata_Deplyment_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notifies that metadata deployment is complete</description>
    <inlineHelpText>Notifies that metadata deployment is complete</inlineHelpText>
    <label>Metadata Deployment Flag</label>
    <type>Checkbox</type>
</CustomField>