force-app/main/default/objects/taralex__OrgSetting__c/fields/taralex__xl_connector_placeholder__c.field-meta.xml
<CustomField>
    <fullName>taralex__xl_connector_placeholder__c</fullName>
    <description>Merge string in Excel document to be replaced with the current record Id</description>
    <inlineHelpText>Merge string in Excel document to be replaced with the current record Id</inlineHelpText>
    <label>xl-connector-placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>